--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "cheerio": "^1.0.0-rc.10",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
+    "express-toastr": "^2.0.2",
     "jsonwebtoken": "^8.5.1",
     "localStorage": "^1.0.4",
     "moment": "^2.29.3",
