--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --http-parser=legacy app.js"
+    "start": "nodemon --http-parser=legacy app.js"
   },
   "keywords": [],
   "author": "",
