--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "express-toastr": "^2.0.2",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "localStorage": "^1.0.4",
     "moment": "^2.29.3",
